Improved error messages, fixed decprecations